# prerequisites

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Prerequisite.cmake
docs/: CLAUDE.md  DEVELOPMENT.md  ROADMAP.md  context.md  dependency_checker.md  instructions.md  plan-dependency.md  prerequisites.md  testing.md  tests-prerequisite.md  todo.md
tests/: CMakeLists.txt
tests/dependency/basic_file_behavior/: CMakeLists.txt  increment_count.cmake  verify_count.cmake
tests/dependency/custom_command/: CMakeLists.txt  execute_command.cmake  verify_results.cmake
tests/dependency/file_vs_stamp_comparison/: CMakeLists.txt  increment_file_count.cmake  increment_stamp_count.cmake  verify_both_counts.cmake
tests/dependency/new_file_detection/: CMakeLists.txt  analyze_new_file_result.cmake  increment_count.cmake  verify_count.cmake
tests/dependency/untracked_file_behavior/: CMakeLists.txt  increment_count.cmake  verify_count.cmake
tests/include/: counter_file.cmake  increment_counter_wrapper.cmake  verify_counter_wrapper.cmake
tests/simple/deferred/: CMakeLists.txt
tests/simple/immediate/: CMakeLists.txt
tests/stamp/behavior/: CMakeLists.txt
tests/stamp/file_deps/: CMakeLists.txt  verify_file_deps.cmake
tests/stamp/file_timestamp/: CMakeLists.txt  increment_and_check.cmake  verify_timestamp.cmake
tests/stamp/incremental/: CMakeLists.txt  increment_counter.cmake  verify_counts.cmake
tests/stamp/missing/: CMakeLists.txt  verify_rebuild.cmake
tests/stamp/reconfig/: CMakeLists.txt  check_reconfig.cmake  track_execution.cmake
(+10 files in other folders)
